--- a/app/src/main/res/layout/fragment_new_pap_property_info_improvements.xml
+++ b/app/src/main/res/layout/fragment_new_pap_property_info_improvements.xml
@@ -4,11 +4,14 @@
     android:layout_height="match_parent"
     tools:context="ug.dataplus_systems.vcsmobile.NewPapPropertyInfoImprovements">
 
-    <!-- TODO: Update blank fragment layout -->
+    <include layout="@layout/recycler_view" />
+
     <TextView
+        android:id="@+id/tv_no_improvements"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Property Info: Improvements"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:text="Add Improvements here"
+        android:visibility="gone" />
 
 </FrameLayout>
