Improvements input screen done

--- a/app/src/main/res/layout/crops_list_item.xml
+++ b/app/src/main/res/layout/crops_list_item.xml
@@ -16,7 +16,7 @@
             android:id="@+id/tv_crop_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Medium Text"
+            android:text="Banana Platation"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="#029618"
             android:textStyle="bold" />
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="Medium Text"
+            android:text="4 acres"
             android:textAppearance="?android:attr/textAppearanceMedium" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
