New Crops fragment fully operationalised adding on click events for crop items in recyclerview

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -65,6 +65,11 @@
         <item>Temporary</item>
     </string-array>
 
+    <string-array name="crop_types">
+        <item>Perennial</item>
+        <item>Seasonal</item>
+    </string-array>
+
     <string-array name="currencies">
         <item>UGX</item>
         <item>USD</item>
