--- a/app/src/main/res/layout/dialog_new_crop.xml
+++ b/app/src/main/res/layout/dialog_new_crop.xml
@@ -41,6 +41,43 @@
 
             </android.support.design.widget.TextInputLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/til_crop_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp">
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Description"
+                     />
+
+
+            </android.support.design.widget.TextInputLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_label_crop_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Crop Type:"
+                    android:textSize="18sp" />
+
+                <Spinner
+                    android:id="@+id/spinner_crop_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/crop_types"
+                    android:paddingLeft="@dimen/activity_vertical_margin" />
+
+            </LinearLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/til_crop_quantity"
@@ -57,16 +94,28 @@
 
             </android.support.design.widget.TextInputLayout>
 
-
-            <Spinner
-                android:layout_marginTop="4dp"
-                android:id="@+id/spinner_crop_units"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:entries="@array/land_size_units"
-                android:paddingLeft="@dimen/activity_vertical_margin" />
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal">
 
+                <TextView
+                    android:id="@+id/tv_label_unit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Units:"
+                    android:textSize="18sp" />
+
+                <Spinner
+                    android:id="@+id/spinner_crop_units"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="4dp"
+                    android:entries="@array/land_size_units"
+                    android:paddingLeft="@dimen/activity_vertical_margin" />
+            </LinearLayout>
 
         </LinearLayout>
 
