New Pap Entry update from the screens to saving in Database

--- a/app/src/main/res/layout/dialog_new_improvement.xml
+++ b/app/src/main/res/layout/dialog_new_improvement.xml
@@ -166,7 +166,7 @@
                         android:id="@+id/et_floor_type"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Doors Type"
+                        android:hint="Floor Type"
                         android:inputType="textCapWords"
                         android:textColor="#000000" />
 
