--- a/app/src/main/res/layout/fragment_new_pap_basic_info.xml
+++ b/app/src/main/res/layout/fragment_new_pap_basic_info.xml
@@ -136,7 +136,23 @@
         </LinearLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/til_physical_address"
+        android:id="@+id/til_physical_address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Physical Address"
+            android:inputType="textCapWords" />
+
+
+    </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_birth_palce"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp">
@@ -145,7 +161,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Physical Address"
+                android:hint="Birth Place"
                 android:inputType="textCapWords" />
 
 
