--- a/app/src/main/res/layout/fragment_new_pap_property_info.xml
+++ b/app/src/main/res/layout/fragment_new_pap_property_info.xml
@@ -121,6 +121,71 @@
 
         </LinearLayout>
 
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_land_rate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Land Rate"
+                android:inputType="numberDecimal" />
+
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_diminution"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Diminution (%)"
+                android:inputType="numberDecimal" />
+
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_share_of_land"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Share of Land (%)"
+                android:inputType="numberDecimal" />
+
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_land_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp">
+
+            <AutoCompleteTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Land Type"
+                android:inputType="textCapSentences" />
+
+
+        </android.support.design.widget.TextInputLayout>
+
+
         <CheckBox
             android:id="@+id/cb_is_resident"
             android:textSize="18sp"
@@ -131,8 +196,16 @@
             android:text="Is resident" />
 
         <CheckBox
-            android:id="@+id/cb_has_crops"
+            android:id="@+id/cb_is_titled"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:checked="false"
+            android:text="Land is titled"
+            android:textSize="18sp"/>
 
+        <CheckBox
+            android:id="@+id/cb_has_crops"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
