New Pap Entry update from the screens to saving in Database

--- a/app/src/main/res/layout/dialog_new_improvement.xml
+++ b/app/src/main/res/layout/dialog_new_improvement.xml
@@ -18,6 +18,7 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:title="Add Improvement"
+            app:navigationIcon="@drawable/ic_structure"
             app:titleTextColor="#ffffff" />
 
         <ScrollView
