--- a/app/src/main/res/layout/dialog_new_crop.xml
+++ b/app/src/main/res/layout/dialog_new_crop.xml
@@ -17,6 +17,7 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:title="Add Crop"
+            app:navigationIcon="@drawable/ic_crop"
             app:titleTextColor="#ffffff" />
 
         <LinearLayout
