--- a/app/src/main/res/layout/fragment_new_pap_basic_info.xml
+++ b/app/src/main/res/layout/fragment_new_pap_basic_info.xml
@@ -185,9 +185,8 @@
 
 
 
-
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/til_birth_palce"
+            android:id="@+id/til_birth_place"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp">
@@ -196,7 +195,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Birth Place"
+                android:hint="Place of Birth"
                 android:inputType="textCapWords" />
 
 
