--- a/app/src/main/res/layout/fragment_new_pap_basic_info.xml
+++ b/app/src/main/res/layout/fragment_new_pap_basic_info.xml
@@ -167,23 +167,6 @@
 
         </LinearLayout>
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/til_physical_address"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp">
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Physical Address"
-                android:inputType="textCapWords" />
-
-
-        </android.support.design.widget.TextInputLayout>
-
-
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/til_birth_place"
@@ -200,7 +183,54 @@
 
 
         </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_tribe"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp">
 
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Tribe"
+                android:inputType="textCapWords" />
+
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_religion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Religion"
+                android:inputType="textCapWords" />
+
+
+        </android.support.design.widget.TextInputLayout>
+
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_occupation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Occupation"
+                android:inputType="textCapWords" />
+
+
+        </android.support.design.widget.TextInputLayout>
 
         <CheckBox
             android:id="@+id/cb_is_married"
@@ -209,7 +239,8 @@
             android:layout_weight="1"
             android:checked="false"
             android:text="Is Married"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:layout_marginTop="8dp"/>
 
 
     </LinearLayout>
