--- a/app/src/main/res/layout/fragment_pap_list_live.xml
+++ b/app/src/main/res/layout/fragment_pap_list_live.xml
@@ -1,10 +1,23 @@
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/swipeContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="ug.dataplus_systems.vcsmobile.PapListLive">
 
-    <include layout="@layout/recycler_view" />
 
-</android.support.v4.widget.SwipeRefreshLayout>
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="ug.dataplus_systems.vcsmobile.PapListLive">
+
+
+        <include layout="@layout/recycler_view" />
+
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+    <include layout="@layout/loading_spinner" />
+
+</FrameLayout>
