--- a/app/src/main/res/layout/fragment_projects_details.xml
+++ b/app/src/main/res/layout/fragment_projects_details.xml
@@ -1,10 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.design.widget.AppBarLayout
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/tContainerz"
         android:layout_width="match_parent"
@@ -19,7 +19,8 @@
             android:background="@color/colorPrimary"
             android:theme="@style/ThemeOverlay.AppCompat.Dark"
             app:tabGravity="fill"
-            app:tabMode="fixed" />
+            app:tabMode="scrollable"
+           />
 
 
     </android.support.design.widget.AppBarLayout>
