--- a/app/src/main/res/layout/fragment_new_pap_basic_info.xml
+++ b/app/src/main/res/layout/fragment_new_pap_basic_info.xml
@@ -128,6 +128,22 @@
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_other_phone_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Other Phone Number"
+                android:inputType="phone" />
+
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
             android:id="@+id/til_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -183,6 +199,7 @@
 
 
         </android.support.design.widget.TextInputLayout>
+
         <android.support.design.widget.TextInputLayout
             android:id="@+id/til_tribe"
             android:layout_width="match_parent"
@@ -236,11 +253,11 @@
             android:id="@+id/cb_is_married"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:checked="false"
             android:text="Is Married"
-            android:textSize="18sp"
-            android:layout_marginTop="8dp"/>
+            android:textSize="18sp" />
 
 
     </LinearLayout>
