--- a/app/src/main/res/layout/dialog_new_crop.xml
+++ b/app/src/main/res/layout/dialog_new_crop.xml
@@ -118,6 +118,22 @@
                     android:paddingLeft="@dimen/activity_vertical_margin" />
             </LinearLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/til_crop_rate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp">
+
+                <AutoCompleteTextView
+                    android:id="@+id/et_crop_rate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Crop Rate"
+                    android:inputType="textCapWords"
+                    android:textColor="#000000" />
+
+            </android.support.design.widget.TextInputLayout>
+
         </LinearLayout>
 
         <View
