--- a/app/src/main/res/layout/dialog_new_structure.xml
+++ b/app/src/main/res/layout/dialog_new_structure.xml
@@ -12,7 +12,7 @@
         android:background="?attr/colorPrimary"
         app:navigationIcon="@drawable/ic_structure"
         app:popupTheme="@style/AppTheme.PopupOverlay"
-        app:title="Add Improvement"
+        app:title="Add Structure"
         app:titleTextColor="#ffffff" />
 
     <ScrollView
@@ -31,7 +31,7 @@
                 android:padding="16dp">
 
                 <android.support.design.widget.TextInputLayout
-                    android:id="@+id/til_improvement_name"
+                    android:id="@+id/til_str_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp">
@@ -50,11 +50,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="Improvement Category"
+                    android:text="Structure Type"
                     android:textColor="@color/colorAccent" />
 
                 <Spinner
-                    android:id="@+id/spinner_improvement_sub_category"
+                    android:id="@+id/spinner_str_type"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
@@ -70,7 +70,7 @@
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Improvement Area"
+                        android:hint="Structure Area"
                         android:inputType="numberDecimal" />
 
 
