--- a/app/src/main/res/layout/fragment_new_pap_fixtures.xml
+++ b/app/src/main/res/layout/fragment_new_pap_fixtures.xml
@@ -2,16 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewPapPropertyInfoStructures">
+    tools:context="ug.dataplus_systems.vcsmobile.NewPapFixturesFrag">
 
-    <include layout="@layout/recycler_view" />
-
+    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:id="@+id/tv_no_improvements"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Add Improvements here"
-        android:visibility="gone" />
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
